@@ -1305,7 +1305,7 @@ this service, you may register by emailing to the translation coordinator.
 
     def upload_po_file(self, work_name):
         archive_base = run.hints.archive_base()
-        incoming = '%s/tmp/%s' % (config.site_path, archive_base)
+        incoming = '%s/tmp/%s' % (config.home_path, archive_base)
         # Remove any file left over from a previous try in dry mode.
         if os.path.isfile(incoming):
             os.remove(incoming)
@@ -1317,7 +1317,7 @@ this service, you may register by emailing to the translation coordinator.
                 dry_flag = ''
             lines = os.popen(
                 'cd %s/tmp && %s/bin/po-register%s %s 2>&1'
-                % (config.site_path, config.site_path, dry_flag, archive_base)
+                % (config.home_path, config.site_path, dry_flag, archive_base)
                 ).readlines()
         except:
             run.reject(_("""\
