@@ -13,6 +13,7 @@ import socket, string
 host = string.split(socket.gethostname(), '.')[0]
 
 if host in ('neoduik',): # The machine of Vrijschrift
+    home_path = "/home/tp"
     progs_path = "/home/tp/progs"
     site_path = "/home/tp/site"
     cache_path = "/home/tp/cache"
